Пытаюсь сделать цвет для навигиации

--- a/pages/academic-performance.html
+++ b/pages/academic-performance.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="academic-performance.html">
+                    <a>
                         Сведения об успеваемости
                     </a>
                 </li>
@@ -41,7 +41,9 @@
             </ul>
         </div>
         <div class="content_body">
-        
+            <div>
+
+            </div>
         </div>
     </div>
 </body>
