Исправил таблицу успеваемости

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="content_header">
             <ul class="header_menu">
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Главная
                     </a>
                 </li>
@@ -50,7 +50,7 @@
                     <li><span>Медянкин Владислав Константинович</span></li>
                     <li>Родился 18 ноября 2003 года в городе <a href="pages/native-city.html">Белово</a></li>
                     <li>В 2021 году закончил МБОУ СОШ №19 города Белово</li>
-                    <li>В настоящий момент получаю образование в <a href="https://tusur.ru/ru"> ТУСУРе</a></li>
+                    <li>В настоящий момент получаю образование в <a target="blank" href="https://tusur.ru/ru"> ТУСУРе</a></li>
                 </ul>
             </div>
         </div>
