--- a/pages/high-education.html
+++ b/pages/high-education.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Университет
                     </a>
                 </li>
