--- a/pages/school.html
+++ b/pages/school.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Школа
                     </a>
                 </li>
