--- a/pages/academic-performance.html
+++ b/pages/academic-performance.html
@@ -3,6 +3,7 @@
 <head>
     <link href="../css/style.css" rel="stylesheet">
     <title>Успеваемость</title>
+    <script src="../js/main.js"></script>
 </head>
 <body>
     <div class="content">
@@ -29,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Сведения об успеваемости
                     </a>
                 </li>
@@ -41,8 +42,169 @@
             </ul>
         </div>
         <div class="content_body">
-            <div>
-
+            <div class="evaluations">
+                <h1>Успеваемость</h1>
+                <div id="btn1" onClick="DrawTable('1semester')" class="button">1 семестр</div>
+                <div id="btn2" onClick="DrawTable('2semester')" class="button">2 семестр</div>
+                <br>
+                <table id="1semester" style="display: table" class="evaluations_table">
+                    <thead>
+                        <tr>
+                            <th rowspan="2">Наименование дисциплины</th>
+                            <th colspan="4">Осенний семестр 2021/2022 у.г.</th>
+                        </tr>
+                        <tr>
+                            <th>Преподаватель</th>
+                            <th>КТ1</th>
+                            <th>КТ2</th>
+                            <th>ЭС</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>ED</td>
+                            <td>Байгулова Т.А.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>ВвП</td>
+                            <td>Хабибулина Н.Ю. <br> Горяинов А.Е.</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">3</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td uib-tooltip="Деловые коммуникации">ДК</td>
+                            <td>Захарова Л.Л.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>ИЯ</td>
+                            <td>Войцеховская Н.Ю.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td>Информатика</td>
+                            <td>Потапова Е.А.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td>ИТ</td>
+                            <td>Коцубинский В.П.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>Математика</td>
+                            <td>Васильева О.В. <br> Ромацкий Б.М.</td>
+                            <td class="evaluations_green">3</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">4</td>
+                        </tr>
+                        <tr>
+                            <td>ОЛЭ</td>
+                            <td>Горяинов А.Е.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>ОПД</td>
+                            <td>Саврук Е.В. <br> Носова А.Л.</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>ФКиС</td>
+                            <td>Марченко Н.В.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table id="2semester" style="display: none" class="evaluations_table">
+                    <thead>
+                        <tr>
+                            <th rowspan="2">Наименование дисциплины</th>
+                            <th colspan="4">Весенний семестр 2021/2022 у.г.</th>
+                        </tr>
+                        <tr>
+                            <th>Преподаватель</th>
+                            <th>КТ1</th>
+                            <th>КТ2</th>
+                            <th>ЭС</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>ED</td>
+                            <td>Байгулова Т.А.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>ВМ</td>
+                            <td>Черкашин М.В. <br> Кибиткин В.В.</td>
+                            <td class="evaluations_green">3</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                        <tr>
+                            <td>ИЯ</td>
+                            <td>Войцеховская Н.Ю.</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">4</td>
+                        </tr>
+                        <tr>
+                            <td>История</td>
+                            <td>Куренков А.В.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td>Математика</td>
+                            <td>Васильева О.В. <br> Ромацкий Б.М.</td>
+                            <td class="evaluations_green">4</td>
+                            <td class="evaluations_green">3</td>
+                            <td class="evaluations_green">4</td>
+                        </tr>
+                        <tr>
+                            <td>ОПД</td>
+                            <td>Афанасьева И.Г. <br> Лариошина И.А.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td>Программирование</td>
+                            <td>Горяинов А.Е.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">3</td>
+                            <td class="evaluations_green">5</td>
+                        </tr>
+                        <tr>
+                            <td>ФКиС</td>
+                            <td>Марченко Н.В.</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">5</td>
+                            <td class="evaluations_green">Зачтено</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
