--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Контакты
                     </a>
                 </li>
