--- a/pages/native-city.html
+++ b/pages/native-city.html
@@ -15,7 +15,7 @@
                     </a>
                 </li>
                 <li>
-                    <a>
+                    <a class="nav_already">
                         Место рождения
                     </a>
                 </li>
