Co-authored-by: Alexandr Krivikov

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <link href="css/style.css" rel="stylesheet">
     <title> Персональная Web-страница </title>
+    <meta charset="utf-8">
+    <meta http-equiv="Refresh" content ="10; URL=file:///C:/Users/USer/Desktop/web/pages/contact.html">
 </head>
 
 <body>
     <div class="content">
-        <div class="content_header">
+        <header class="content_header">
             <ul class="header_menu">
                 <li>
                     <a class="nav_already">
@@ -40,7 +42,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </header>
         <div class="content_body">
             <div class="about_me_photo">
                 <img class="about_img" src="assets/me1.jpg" alt="Its me...">
