--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,8 +5,105 @@
     <link href="../css/style.css" rel="stylesheet">
     <title>Контакты</title>
 </head>
+
 <body>
-    <div class="content">
+
+    <body>
+        <table cellpadding="0" cellspacing="0" width="100%">
+            <tr>
+                <th colspan=1>
+                    <div class="content_header">
+                        <ul class="header_menu">
+                            <li>
+                                <a href="../index.html">
+                                    Главная
+                                </a>
+                            </li>
+                            <li>
+                                <a href="native-city.html">
+                                    Место рождения
+                                </a>
+                            </li>
+                            <li>
+                                <a href="school.html">
+                                    Школа
+                                </a>
+                            </li>
+                            <li>
+                                <a href="high-education.html">
+                                    Университет
+                                </a>
+                            </li>
+                            <li>
+                                <a href="academic-performance.html">
+                                    Сведения об успеваемости
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav_already">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </th>
+            </tr>
+
+            <tr class="table_body">
+                <td colspan=1>
+                    <div class="content_body">
+                        <div class="h1">
+                            <ul class="about">
+                                <li><span>Электронная почта: </span> <a href="mailto:medyankin03@gmail.com">medyankin03@mail.ru</a></li>
+                                <li><span>ВКонтакте: </span> <a href="https://vk.com/not_sdnss"> Медянкин Владислав</a></li>
+                                <li><span>Номер телефона: </span> 8 913 071-78-46</li>
+                            </ul>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+
+            <tr>
+                <th colspan=1>
+                    <div class="content_footer">
+                        <ul class="header_menu">
+                            <li>
+                                <a href="../index.html">
+                                    Главная
+                                </a>
+                            </li>
+                            <li>
+                                <a href="native-city.html">
+                                    Место рождения
+                                </a>
+                            </li>
+                            <li>
+                                <a href="school.html">
+                                    Школа
+                                </a>
+                            </li>
+                            <li>
+                                <a href="high-education.html">
+                                    Университет
+                                </a>
+                            </li>
+                            <li>
+                                <a href="academic-performance.html">
+                                    Сведения об успеваемости
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav_already">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </th>
+            </tr>
+        </table>
+    </body>
+    <!-- <div class="content">
         <div class="content_header">
             <ul class="header_menu">
                 <li>
@@ -50,6 +147,7 @@
                 </ul>
             </div> 
         </div>
-    </div>
+    </div> -->
 </body>
+
 </html>
