Для 1&2 лаб сделать вкладки: Место рождения,Школа.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                         Контакты
                     </a>
                 </li>
+                <li>
+                    <a href="pages/other.html">
+                        Разное
+                    </a>
+                </li>
             </ul>
         </header>
         <div class="content_body">
