--- a/pages/academic-performance.html
+++ b/pages/academic-performance.html
@@ -39,11 +39,16 @@
                         Контакты
                     </a>
                 </li>
+                <li>
+                    <a href="other.html">
+                        Разное
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="content_body">
             <div class="evaluations">
-                <h1>Успеваемость</h1>
+                <h3>Успеваемость</h3>
                 <div id="btn1" onClick="DrawTable('1semester')" class="button">1 семестр</div>
                 <div id="btn2" onClick="DrawTable('2semester')" class="button">2 семестр</div>
                 <br>
