--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,6 +44,11 @@
                                     Контакты
                                 </a>
                             </li>
+                            <li>
+                                <a href="other.html">
+                                    Разное
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </th>
@@ -54,7 +59,7 @@
                     <div class="content_body">
                         <div class="h1">
                             <ul class="about">
-                                <li><span>Электронная почта: </span> <a href="mailto:medyankin03@gmail.com">medyankin03@mail.ru</a></li>
+                                <li><span>Электронная почта: </span> <a href="mailto:medyankin03@mail.ru">medyankin03@mail.ru</a></li>
                                 <li><span>ВКонтакте: </span> <a href="https://vk.com/not_sdnss"> Медянкин Владислав</a></li>
                                 <li><span>Номер телефона: </span> 8 913 071-78-46</li>
                             </ul>
