--- a/pages/high-education.html
+++ b/pages/high-education.html
@@ -40,9 +40,67 @@
                         Контакты
                     </a>
                 </li>
+                <li>
+                    <a href="other.html">
+                        Разное
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="content_body">
+            <h3>Сведения о высшем образовании</h3>
+                    <br>
+                    <p style="text-indent: 22px;">
+                        На данный момент я обучаюсь в <a href="https://tusur.ru" target="_blank">Томском Государственном университете Систем управления и радиоэлектроники (ТУСУР)</a>.
+                    </p>
+                    <p style="text-indent: 22px;">
+                        Данные о получаемом образовании:
+
+                        <dl>
+                            <dt>
+                                <b>Вуз: </b>
+                            </dt>
+                            <dd>
+                                &nbsp;<a href="https://tusur.ru" target="_blank">ТУСУР (бывш. ТАСУР, ТИАСУР) '25</a>
+                            </dd>
+                            <dt>
+                                <b>Факультет: </b>
+                            </dt>
+                            <dd>
+                                &nbsp;Факультет вычислительных систем
+                            </dd>
+                            <dt>
+                                <b>Кафедра: </b>
+                            </dt>
+                            <dd>
+                                &nbsp;Кафедра компьютерных систем в управлении и проектировании (КСУП)
+                            </dd>
+                            <dt>
+                                <b>Специальность: </b>
+                            </dt>
+                            <dd>
+                                &nbsp; Информатика и вычислительная техника
+                            </dd>
+                            <dt>
+                                <b>Профиль: </b>
+                            </dt>
+                            <dd>
+                                &nbsp; Разработка программного обеспечения
+                            </dd>
+                            <dt>
+                                <b>Форма обучения: </b>
+                            </dt>
+                            <dd>
+                                &nbsp; Очное отделение
+                            </dd>
+                            <dt>
+                                <b>Статус: </b>
+                            </dt>
+                            <dd>
+                                &nbsp; Студент (бакалавр)
+                            </dd>
+                        </dl>
+                    </p>
         </div>
     </div>
 </body>
