--- a/pages/native-city.html
+++ b/pages/native-city.html
@@ -39,6 +39,11 @@
                         Контакты
                     </a>
                 </li>
+                <li>
+                    <a href="other.html">
+                        Разное
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="content_body"> 
