--- a/pages/other.html
+++ b/pages/other.html
@@ -40,18 +40,23 @@
                         Контакты
                     </a>
                 </li>
+                <li>
+                    <a class="nav_already">
+                        Разное
+                    </a>
+                </li>
             </ul>
         </header>
         <div class="content_body">
             <div id="scroll_bottom" class="btn bottom" onClick="window.scrollTo(0, document.body.scrollHeight);">↓ Вниз</div>
             <div id="scroll_top" class="btn top" onClick="window.scrollTo(document.body.scrollHeight, 0);">↑ Вверх</div>
             <div class="other">
-                <h1>Заголовок h1</h1>
-                <h2>Заголовок h2</h2>
-                <h3>Заголовок h3</h3>
-                <h4>Заголовок h4</h4>
-                <h5>Заголовок h5</h5>
-                <h6>Заголовок h6</h6>
+                <h1 style="margin: 5px">Заголовок h1</h1>
+                <h2 style="margin: 5px">Заголовок h2</h2>
+                <h3 style="margin: 5px">Заголовок h3</h3>
+                <h4 style="margin: 5px">Заголовок h4</h4>
+                <h5 style="margin: 5px">Заголовок h5</h5>
+                <h6 style="margin: 5px">Заголовок h6</h6>
                 <br>
                 <i>Курсив</i>
                 <br>
@@ -98,6 +103,130 @@
                         </ol>
                     </li>
                 </ul>
+            </div>
+            <div class="block-border-radius">
+                <div class="content-text">
+                    <div id="10" class="block-border-radius">
+                        <p><a href="../images/tusur_logo_main_color_rgb.eps">Сохранить логотип ТУСУР в формате eps</a></p>
+                    </div>
+                    <div id="13" class="block-border-radius"> 
+                        <div class="inline-box" style="overflow: hidden;">
+                            <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;">
+                            <p style="text-align:center;">Абсолютная величина</p>
+                        </div>
+                        <div class="inline-box" style="overflow: hidden;">
+                            <img src="../images/tomsk.jpg" style="width: 50%; height: 50%;">
+                            <p style="text-align:center;">Относительная величина</p>
+                        </div>
+                    </div>
+                    <div id="14" class="block-border-radius"> 
+                        <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" align="left">
+                        <p>Выравнивание</p>
+                        <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" align="bottom">
+                    </div>
+                    <div id="16" class="block-border-radius">
+                        <p>Ссылка-картинка целиком</p>
+                        <a href="https://tomsk.gov.ru/" target="_blank">
+                            <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" vspace="10">
+                        </a>
+                        <p>Карта изображения</p>
+                        <img src="../images/mapimage.png" vspace="10" usemap="#map">
+                        <map name="map">
+                            <area shape="rect" coords="0,0, 200,200" alt="Первая ссылка" href="https://tusur.ru">
+                            <area shape="rect" coords="201,0, 400,200" alt="Вторая ссылка" href="https://school34-tomsk.ru/">
+                            <area shape="rect" coords="0,200, 200,400" alt="Третья ссылка" href="https://tomsk.gov.ru/">
+                            <area shape="rect" coords="201,201, 400,400" alt="Четвертая ссылка" href="https://vk.com/shipverty">
+                        </map>
+                    </div>
+                    <div id="17" class="block-border-radius">
+                        <table>
+                            <tr>
+                                <td rowspan="3" colspan="2">
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                                <td>text1</td>
+                            </tr>
+                            <tr>
+                                <td>text2</td>
+                            </tr>
+                            <tr>
+                                <td>text3</td>
+                            </tr>
+                        </table>
+
+                        <table>
+                            <tr>
+                                <td colspan="3">text</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                            </tr>
+                        </table>
+
+                        <table>
+                            <tr>
+                                <td rowspan="3" colspan="2">
+                                    <table>
+                                        <tr></tr>
+                                        <tr>
+                                            <td>text</td><td>text</td>
+                                        </tr>
+                                        <tr>
+                                            <td>text</td><td>text</td>
+                                        </tr>
+                                    </table>
+                                </td>
+                                <td>text1</td>
+                            </tr>
+                            <tr>
+                                <td>text2</td>
+                            </tr>
+                            <tr>
+                                <td>text3</td>
+                            </tr>
+                        </table>
+
+                        <table>
+                            <tr>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                                <td>
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">text</td>
+                            </tr>
+                        </table>
+
+                        <table>
+                            <tr>
+                                <td>text1</td>
+                                <td rowspan="3" colspan="2">
+                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>text2</td>
+                            </tr>
+                            <tr>
+                                <td>text3</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
             </div>
         </div>
